--- a/src/app.css
+++ b/src/app.css
@@ -13,11 +13,6 @@
 	--grey-3: #3b3b3d;
 	--grey-1: #020203;
 
-	--beige-9: #ece0db;
-	--beige-7: #a79c97;
-	--beige-5: #5f5854;
-	--beige-3: #312b29;
-
 	--pink-9: #ffdbeb;
 	--pink-6: #ff30ad;
 	--pink-7: #ff69b8;
@@ -28,17 +23,19 @@
 	--orange-3: #751200;
 
 	--color-bg: var(--grey-9);
-	--color-button: var(--beige-9);
-	--color-button-2: var(--beige-5);
+	--color-button: var(--grey-9);
+	--color-button-2: var(--grey-5);
 	--color-text: var(--grey-1);
 	--color-text-2: var(--grey-5);
+
+	--radius-1: 6px;
 
 	--easing-1: cubic-bezier(0.38, 0, 0.16, 1);
 	--transition-1: 0.15s var(--easing-1);
 	--transition-2: 0.3s var(--easing-1);
 	--transition-3: 0.5s var(--easing-1);
 
-	--shadow-1: 0px 0px 1px rgba(0, 0, 0, 0.05), 0px 8px 16px rgba(0, 0, 0, 0.1);
+	--shadow-1: 0px 0px 1px rgba(0, 0, 0, 0.05), 0px 8px 16px rgba(0, 0, 0, 0.08);
 	--shadow-grey: 0 0 0 16px var(--grey-9);
 
 	font-family: var(--font-body);
@@ -119,10 +116,7 @@ nav {
 	justify-content: center;
 	background-color: var(--grey-10);
 	padding: 16px !important;
-	box-shadow:
-		rgba(0, 0, 0, 0.09) 0px 0.75px 0.75px -0.75px,
-		rgba(0, 0, 0, 0.09) 0px 2.75px 2.75px -1.75px,
-		rgba(0, 0, 0, 0.09) 0px 12px 12px -2.5px;
+	box-shadow: var(--shadow-1);
 	z-index: 10;
 	transition: var(--transition-1);
 }
@@ -147,7 +141,7 @@ iframe {
 	max-width: 960px;
 	max-height: 90%;
 	aspect-ratio: 1.33333;
-	border-radius: 6px;
+	border-radius: var(--radius-1);
 	box-shadow: var(--shadow-1);
 }
 
@@ -279,9 +273,7 @@ nav:hover .button-cta {
 	height: 32px;
 	border-radius: 50%;
 	border: 1px solid var(--grey-10);
-	box-shadow:
-		0 0 2px #00000026,
-		0 8px 16px #0000001a;
+	box-shadow: var(--shadow-1);
 	top: 0;
 	left: 76px;
 }
@@ -384,7 +376,7 @@ nav:hover .button-cta {
 	background-color: var(--grey-10);
 }
 
-.force-graph {
+.node-graph {
 	position: relative;
 	overflow: hidden;
 	height: 100%;
@@ -425,7 +417,7 @@ nav:hover .button-cta {
 	position: absolute;
 	background-color: var(--grey-10);
 	padding: 6px;
-	border-radius: 6px;
+	border-radius: var(--radius-1);
 	box-shadow: var(--shadow-1);
 	transition: var(--transition-2);
 }
@@ -493,7 +485,7 @@ nav:hover .button-cta {
 	max-height: 864px;
 	display: flex;
 	background-color: var(--grey-10);
-	border-radius: 6px;
+	border-radius: var(--radius-1);
 	box-shadow: var(--shadow-1), var(--shadow-grey);
 }
 
@@ -555,7 +547,6 @@ nav:hover .button-cta {
 	border-radius: 50%;
 	padding-bottom: 1px;
 	justify-content: center;
-	font-size: 18px;
 	background: var(--grey-10);
 	color: var(--grey-1);
 }
@@ -577,7 +568,7 @@ nav:hover .button-cta {
 	justify-content: end;
 	gap: 4px;
 	padding: 48px 48px 108px 48px;
-	border-radius: 6px;
+	border-radius: var(--radius-1);
 	box-shadow: var(--shadow-1), var(--shadow-grey);
 	background-color: var(--grey-10);
 	z-index: 1;
@@ -629,7 +620,7 @@ nav:hover .button-cta {
 	position: relative;
 	max-width: 504px;
 	padding: 142px 48px 48px 48px;
-	border-radius: 6px;
+	border-radius: var(--radius-1);
 	border: 2px solid var(--grey-10);
 	background-color: var(--grey-9);
 	box-shadow: var(--shadow-grey);
@@ -701,9 +692,199 @@ nav:hover .button-cta {
 }
 
 @media (min-width: 720px) and (max-width: 1055px) {
+	/* HERO */
+	.hero div {
+		height: 206px;
+	}
+
+	.hero div span {
+		position: absolute;
+		left: 118px;
+		top: 4px;
+		font-style: italic;
+		letter-spacing: -1%;
+	}
+
+	.hero div h1 {
+		top: 50px;
+	}
+
+	.hero div h1:nth-of-type(2) {
+		left: 186px;
+	}
+
+	.hero div h1:nth-of-type(3) {
+		top: 100px;
+	}
+
+	.hero div svg {
+		width: 46px;
+		height: 46px;
+		top: 53px;
+		left: 141px;
+	}
+
+	.hero div button {
+		position: absolute;
+		bottom: 0px;
+	}
+
+	.hero div button:nth-of-type(2) {
+		left: 170px;
+		bottom: 0px;
+	}
+
+	/* COMPONENTS SECTIONS */
+	.components {
+		padding: 0px 0px 0px 72px;
+	}
+
+	.components h2,
+	.components p {
+		min-width: 256px;
+		max-width: 320px;
+	}
+
+	.left {
+		padding: 0 48px 0 64px;
+	}
+
+	.right {
+		padding: 0 64px 0 48px;
+	}
+
+	/* CONTAINER */
+	.container {
+		padding: 48px;
+	}
+
+	.container div {
+		max-width: 308px !important;
+		padding: 12px;
+	}
+
+	/* FEATURES */
+	.features-container {
+		padding: 108px 64px 116px 136px;
+	}
+
+	.features {
+		max-width: 772px;
+		max-height: 772px;
+		min-height: 386px;
+	}
+
+	.features h2,
+	.features p {
+		width: 280px;
+	}
+
+	.features span {
+		width: 200px;
+		padding: 32px;
+		gap: 16px;
+	}
+
+	.features-shape {
+		inset: 32px 0px 0px 32px;
+		width: 72px;
+		height: 72px;
+	}
+
+	/* PRICING */
+	.pricing-card {
+		min-width: 280px;
+		width: 280px;
+		height: 436px;
+		gap: 4px;
+		padding: 32px 32px 84px 32px;
+	}
+
+	.pricing-card h1 {
+		inset: 32px auto auto 32px;
+	}
+
+	.pricing-card span {
+		inset: 113px auto auto 32px;
+	}
+
+	.pricing-card button {
+		inset: auto auto 28px 32px;
+	}
+
+	.pricing-divider {
+		inset: 153px auto auto 32px;
+		height: 1.5px;
+		width: 92px;
+	}
+
+	.pricing-card svg {
+		min-width: 20px;
+		min-height: 20px;
+		width: 20px;
+		height: 20px;
+	}
+
+	.pricing-card li {
+		gap: 8px;
+	}
+
+	/* FAQ */
+	.faq-container {
+		max-width: 504px;
+		min-width: 312px;
+		padding: 108px 32px 32px 32px;
+	}
+
+	.faq-container h1 {
+		inset: 32px auto auto 32px;
+	}
+
+	.faq-question {
+		padding: 16px 16px 16px 0px;
+		gap: 8px;
+	}
+
+	.faq-question svg {
+		width: 24px;
+		height: 24px;
+		margin-top: -2px;
+	}
+
+	.faq-answer {
+		padding: 0 0 0 32px;
+	}
+
+	.faq-answer.active {
+		max-height: 96px;
+		padding: 0 0 16px 32px;
+	}
 }
 
 @media (max-width: 719px) {
+}
+
+@media (max-width: 1055px) {
+	:root {
+		--font-size-body: 16px;
+	}
+
+	h1 {
+		font-size: 46px;
+		line-height: 100%;
+		letter-spacing: -1.25%;
+	}
+
+	h2 {
+		font-size: 32px;
+		line-height: 102%;
+		letter-spacing: -1.25%;
+	}
+
+	h3 {
+		font-size: 20px;
+		line-height: 100%;
+	}
 }
 
 @media (prefers-reduced-motion: no-preference) {
