--- a/src/app.css
+++ b/src/app.css
@@ -439,7 +439,6 @@ nav:hover .button-cta {
 	padding-bottom: 1px;
 	align-items: center;
 	justify-content: center;
-	font-size: 18px;
 	background: var(--grey-10);
 	color: var(--grey-1);
 }
@@ -751,6 +750,32 @@ nav:hover .button-cta {
 
 	.right {
 		padding: 0 64px 0 48px;
+	}
+
+	/* SLIDER */
+
+	.slider-item {
+		padding: 6px;
+	}
+
+	.slider-controls {
+		bottom: 20px;
+		gap: 16px;
+	}
+
+	.slider-controls button {
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		display: flex;
+		padding-bottom: 1px;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.slider-controls button.active {
+		background: linear-gradient(to top, var(--grey-1), var(--grey-3));
+		color: var(--grey-10);
 	}
 
 	/* CONTAINER */
