--- a/src/app.css
+++ b/src/app.css
@@ -261,6 +261,17 @@ nav:hover .button-cta {
 	padding-left: 144px;
 }
 
+.grid {
+	position: fixed;
+	z-index: -1;
+	left: 72px;
+	stroke: #ffffff;
+	stroke-width: 1px;
+	width: calc(100vw - 72px);
+	height: 100vh;
+	overflow: visible;
+}
+
 .hero div {
 	position: relative;
 	flex-grow: 1;
@@ -352,28 +363,25 @@ nav:hover .button-cta {
 	max-width: 348px;
 }
 
-.left {
-	height: 100%;
-	width: 50%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: end;
-	padding: 0 64px 0 208px;
-	gap: 20px;
-	background-color: var(--grey-10);
-}
-
+.left,
 .right {
 	height: 100%;
 	width: 50%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: start;
-	padding: 0 208px 0 64px;
 	gap: 20px;
 	background-color: var(--grey-10);
+}
+
+.left {
+	align-items: end;
+	padding: 0 64px 0 208px;
+}
+
+.right {
+	align-items: start;
+	padding: 0 208px 0 64px;
 }
 
 .node-graph {
@@ -753,7 +761,6 @@ nav:hover .button-cta {
 	}
 
 	/* SLIDER */
-
 	.slider-item {
 		padding: 6px;
 	}
@@ -887,6 +894,139 @@ nav:hover .button-cta {
 }
 
 @media (max-width: 719px) {
+	/* NAV */
+	nav {
+		position: fixed;
+		overflow: hidden;
+		top: 0px;
+		left: 0px;
+		right: 0px;
+		width: 100%;
+		height: 60px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: var(--grey-10);
+		padding: 16px !important;
+		box-shadow: var(--shadow-1);
+		z-index: 10;
+		transition: var(--transition-1);
+	}
+
+	nav:hover {
+		width: 182px;
+	}
+
+	/* HERO */
+	.hero {
+		padding: 16px;
+	}
+
+	.grid {
+		left: 0px;
+		width: 100vw;
+	}
+
+	.hero div {
+		height: 206px;
+	}
+
+	.hero div span {
+		position: absolute;
+		left: 118px;
+		top: 4px;
+		font-style: italic;
+		letter-spacing: -1%;
+	}
+
+	.hero div h1 {
+		top: 50px;
+	}
+
+	.hero div h1:nth-of-type(2) {
+		left: 186px;
+	}
+
+	.hero div h1:nth-of-type(3) {
+		top: 100px;
+	}
+
+	.hero div svg {
+		width: 46px;
+		height: 46px;
+		top: 53px;
+		left: 141px;
+	}
+
+	.hero div button {
+		position: absolute;
+		bottom: 0px;
+	}
+
+	.hero div button:nth-of-type(2) {
+		left: 170px;
+		bottom: 0px;
+	}
+
+	/* DEMO-VIDEO */
+	.demo {
+		padding: 0px 16px 0px 16px;
+	}
+
+	/* COMPONENTS SECTIONS */
+	.components {
+		flex-direction: column;
+		padding: 0px;
+	}
+
+	.components:has(.left) {
+		flex-direction: column-reverse;
+	}
+
+	.components h2,
+	.components p {
+		min-width: 328px;
+		max-width: 348px;
+	}
+
+	.left,
+	.right {
+		height: 30%;
+		min-height: 256px;
+		width: 100%;
+		padding: 0 16px 0 16px;
+		gap: 20px;
+		background-color: var(--grey-10);
+	}
+
+	.node-graph {
+		position: relative;
+		overflow: hidden;
+		height: 100%;
+		width: 100%;
+	}
+
+	.node {
+		position: absolute;
+		cursor: grab;
+		touch-action: none;
+		user-select: none;
+		overflow: hidden;
+		padding: 2px;
+		transition: transform var(--transition-2);
+	}
+
+	.node.dragging {
+		transition: none;
+	}
+
+	.node:hover {
+		transform: scale(1.1) rotate(15deg);
+	}
+
+	.node:active {
+		cursor: grabbing;
+	}
 }
 
 @media (max-width: 1055px) {
