--- a/src/app.css
+++ b/src/app.css
@@ -980,6 +980,15 @@ nav:hover .button-cta {
 		height: fit-content;
 		gap: 32px;
 	}
+
+	.pricing-card {
+		max-width: 504px;
+		min-width: 312px;
+		width: 100%;
+		height: 436px;
+		gap: 4px;
+		padding: 32px 32px 84px 32px;
+	}
 }
 
 @media (max-width: 1055px) {
