--- a/src/app.css
+++ b/src/app.css
@@ -682,6 +682,28 @@ nav:hover .button-cta {
 	transform: rotate(45deg);
 }
 
+/* HAMBURGER */
+.hamburger-container {
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	transition: 1s ease-in-out;
+}
+
+.hamburger-container .hamburger-line {
+	margin: 0;
+	width: 100%;
+	transform: rotate(0deg);
+	transform-origin: center;
+	background-color: var(--grey-1);
+}
+
+.hamburger-container.isOpen .hamburger-line:nth-child(2) {
+	opacity: 0;
+}
+
 @media (max-width: 1055px) {
 	/* HERO */
 	.hero div {
