--- a/src/app.css
+++ b/src/app.css
@@ -684,8 +684,9 @@ nav:hover .button-cta {
 
 /* HAMBURGER */
 .hamburger {
-	position: absolute;
-	inset: 12px 12px auto auto;
+	display: none !important;
+	position: fixed;
+	inset: 8px 12px auto auto;
 	width: 44px;
 	height: 44px;
 	display: flex;
@@ -1017,6 +1018,11 @@ nav:hover .button-cta {
 		height: 436px;
 		gap: 4px;
 		padding: 32px 32px 84px 32px;
+	}
+
+	/* HAMBURGER */
+	.hamburger {
+		display: flex !important;
 	}
 }
 
