--- a/src/app.css
+++ b/src/app.css
@@ -682,6 +682,14 @@ nav:hover .button-cta {
 	transform: rotate(45deg);
 }
 
+/* LOGO */
+.logo-big {
+	position: fixed;
+	top: 14px;
+	left: 18.5px;
+	z-index: 10;
+}
+
 /* HAMBURGER */
 .hamburger {
 	display: none !important;
@@ -900,6 +908,44 @@ nav:hover .button-cta {
 		right: 0px;
 		width: 100%;
 		height: 60px;
+		justify-content: end;
+	}
+
+	nav.open {
+		height: 296px;
+	}
+
+	.button-nav span {
+		opacity: 1;
+	}
+
+	nav .button-cta {
+		position: absolute;
+		top: 10px;
+		right: 64px;
+		width: fit-content;
+		padding: 0px 28px 0px 28px;
+	}
+
+	nav .button-cta span {
+		opacity: 1;
+	}
+
+	nav .button-cta svg {
+		display: none;
+	}
+
+	.mobile-mask {
+		background-color: var(--grey-10);
+		position: absolute;
+		inset: 0px 0px auto 0px;
+		height: 60px;
+	}
+
+	/* LOGO */
+	.logo-big {
+		top: 10px;
+		left: 14px;
 	}
 
 	/* HERO */
@@ -1006,6 +1052,7 @@ nav:hover .button-cta {
 
 	/* FAQ */
 	.features-container:has(.faq-container) {
+		padding-top: 0px;
 		flex-direction: column;
 		height: fit-content;
 		gap: 32px;
